--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 #android.enableDexingArtifactTransform=false
+org.gradle.warning.mode=none
+org.gradle.unsafe.configuration-cache=true
