--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.solodroid.ads.sdkdemo.MyApplication"
+        android:name="com.solodroid.ads.sdkdemo.application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +25,7 @@
             android:value="@string/applovin_sdk_key" />
 
         <activity
-            android:name=".ActivitySplash"
+            android:name=".activity.ActivitySplash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,10 +35,10 @@
         </activity>
 
         <activity
-            android:name="com.solodroid.ads.sdkdemo.MainActivity"
+            android:name="com.solodroid.ads.sdkdemo.activity.MainActivity"
             android:exported="true" />
 
-        <activity android:name="com.solodroid.ads.sdkdemo.SecondActivity" />
+        <activity android:name="com.solodroid.ads.sdkdemo.activity.SecondActivity" />
 
     </application>
 
